--- a/index.html
+++ b/index.html
@@ -26,33 +26,11 @@
             <div class="button-up install">
                 <img src="https://4292025-fewgffe9452e-1341578122.cos.accelerate.myqcloud.com/six/img-header.js" alt="">
             </div>
-            <div class="tab-list">
-                <button class="list-btn active">直播</button>
-                <button class="list-btn">黑料</button>
-                <button class="list-btn">约炮</button>
-                <button class="list-btn">暗网</button>
-                <button class="list-btn">游戏</button>
-                <button class="list-btn">萝莉</button>
-                <button class="list-btn">乱伦</button>
-                <button class="list-btn">女神</button>
-                <button class="list-btn">换妻</button>
-                <button class="list-btn">动漫</button>
-            </div>
+            <div class="tab-list" id="tab-list"></div>
         </div>
 
         <!--body-->
-        <main class="container install">
-            <div class="content content-1 active"><img src="images/demo-img-1.webp" alt=""></div>
-            <div class="content content-2"><img src="images/demo-img-2.webp" alt=""></div>
-            <div class="content content-3"><img src="images/demo-img-3.jpeg" alt=""></div>
-            <div class="content content-4"><img src="images/demo-img-4.jpeg" alt=""></div>
-            <div class="content content-5"><img src="images/demo-img-5.webp" alt=""></div>
-            <div class="content content-6"><img src="images/demo-img-6.webp" alt=""></div>
-            <div class="content content-7"><img src="images/demo-img-7.jpeg" alt=""></div>
-            <div class="content content-8"><img src="images/demo-img-4.jpeg" alt=""></div>
-            <div class="content content-9"><img src="images/demo-img-6.webp" alt=""></div>
-            <div class="content content-10"><img src="images/demo-img-2.webp" alt=""></div>
-        </main>
+        <main class="container install" id="container"></main>
 
         <!--footer-->
         <div class="footer install">
@@ -71,6 +49,8 @@
     </div>
 
     <!--js-->
+    <script src="js/html_render/tab_list_render.js"></script>
+    <script src="js/html_render/content_render.js"></script>
     <script src="js/adjust_main_padding.js"></script>
     <script src="js/tab_click.js"></script>
     <script src="js/install_app/app_load.js"></script>
