--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!--cdn-->
     <script src="js/install_app/appinstall.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
